--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/?uuidRepresentation=standard
-API_KEY=9307bfd5fa011428ff198bb37547f979
+
+NEXT_PUBLIC_API_KEY=9307bfd5fa011428ff198bb37547f979
+NEXT_PUBLIC_BASE_URL=https://api.up2tom.com/v3
