--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm install
-    - name: Build the application
-      run: npm run build
-    - name: Run tests
-      run: npm test
+    - run: npm run build
+    - run: npm test
