--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^16.4.5",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
     "next": "latest",
